Website is almost done and Nathan still smells like poopy

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,4 +1,6 @@
 // As hex codes */
+$color-gray-light: #4b4b4b;
+$color-gray-medium: #353535;
 $color-gray-dark: #1a1a1a;
 
 $color-blue-0: #04415B;	// Main blue color */
