--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -26,7 +26,15 @@
 --------------------------------------------- */
 @import "content/posts-and-pages";
 
-/* Comments
+/* Search
+--------------------------------------------- */
+@import "content/search"; 
+/* Search
+
+--------------------------------------------- */
+@import "content/contact-form-7";   
+
+/* Comments 
 --------------------------------------------- */
 @import "comments/comments";
 
