--- a/sass/base/typography/_typography.scss
+++ b/sass/base/typography/_typography.scss
@@ -1,3 +1,19 @@
+@font-face {
+	font-family: 'xoloniumregular';
+	src: url('./cfs-fonts/xolonium-regular-webfont.woff2') format('woff2'),
+			 url('./cfs-fonts/xolonium-regular-webfont.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'xoloniumbold';
+	src: url('./cfs-fonts/xolonium-bold-webfont.woff2') format('woff2'),
+			 url('./cfs-fonts/xolonium-bold-webfont.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 
