--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -100,16 +100,26 @@
 .post {
   padding: 1rem;
   background: rgba(0, 0, 0, .6);
-  margin: 1rem 0;
+  margin: 3rem 0 1rem;
   line-height: 2rem;
 }
 
-.entry-header {
+.page-header {
 
 }
 
-.entry-title {
+.page-title {
+  
+}
+
+.entry-header {
+  
+}
+
+.entry-title,
+.page-title {
   color: lighten($color-blue-1, 20);
+  margin: 2rem 0 0;
 }
 
 .entry-thumbnail {
@@ -118,10 +128,15 @@
 
 .entry-meta {
 
+  span {
+    color: #fff;
+    display: inline-block;
+    margin: 0 0 1rem;
+  }
+
   a {
     color: lighten($color-blue-1, 50);
-    position: relative;
-    
+    position: relative; 
     
     &::after {
       content: '';
@@ -263,10 +278,6 @@
 }
 
 .archive-primary-content {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-row: 2 / 3;
-  align-items: start;
 
   .page-header {
     grid-column: 1/3;
@@ -294,5 +305,4 @@
     grid-column: 1 / 3;
     grid-row: 9999/10000; 
   }
-   
 }
