--- a/sass/components/content/_sidebars.scss
+++ b/sass/components/content/_sidebars.scss
@@ -9,8 +9,7 @@
   align-items: center;
   width: 32rem;
   min-width: 32rem;
-  margin: 5rem 0 1rem;
-  background: rgba(0, 0, 0, .6);
+  margin: 1rem;
   padding: 1rem;
 
   .widget {
