--- a/sass/utilities/_media-queries.scss
+++ b/sass/utilities/_media-queries.scss
@@ -75,8 +75,19 @@
     .paginate-links {
       grid-column: 1 / 3;
       grid-row: 9999/10000; 
-    }
-     
+    } 
+  }
+
+  .hamburger-button {
+    display: none;
+  }
+
+  .main-navigation {
+    display: block;
+  }
+
+  .main-navigation__mobile {
+    display: none;
   }
 
   .sidebar-2 {
@@ -105,7 +116,7 @@
   }
 
   .sidebar-1 {
-    background: rgba(0, 0, 0, 0);
+    margin: 3rem 0 1rem;
   }
 
 }
