--- a/sass/components/comments/_comments.scss
+++ b/sass/components/comments/_comments.scss
@@ -1,10 +1,8 @@
 // Comments area
 .comments-area { 
-  margin: 8rem 0;
-  background: rgba(0, 0, 0, .6);
-  padding: 1rem;
+  margin: 2rem 0;
   min-width: 26rem;
-  width: 96%;
+  width: 100%;
 }
 
 .comments-title {
@@ -127,10 +125,9 @@
   background: linear-gradient(rgba(0, 0, 0, .7), rgba($color-blue-4, .7));
   outline: 1px solid lighten($color-blue-1, 44); 
   padding: .4rem 1rem;
-  margin: 6rem 0;
-  width: auto;
+  margin: 6rem auto 0;
   min-width: 26rem;
-  width: 50%;
+  max-width: 60rem;
 }
 
 .comment-reply-title {
@@ -180,12 +177,16 @@
 .comment-form-author,
 .comment-form-email {
   text-align: left;
+  background: yellowgreen;
+  margin: 1.4rem 0 0;
+  padding: 1rem;
 
   input {
     padding: .6rem 1rem;
     color: lighten($color-gray-dark, 16);
     font-size: 1.8rem;
-    margin: 1.4rem 0 0;
+    max-width: 90%;
+    background: lightseagreen;
 
     &:focus {
       box-shadow: inset 0 0 2px 1px #000;
