--- a/sass/components/widgets/_widgets.scss
+++ b/sass/components/widgets/_widgets.scss
@@ -1,3 +1,70 @@
+.sidebar-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 32rem;
+  min-width: 32rem;
+  margin: 1rem;
+  padding: 1rem;
+
+  .widget {
+		margin: 2rem 0;
+		display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    min-width: 26rem;
+    max-width: 32rem;
+    padding: 0 1rem;
+
+		&-title {
+			color: $color-blue-1;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0 1rem;
+    }
+  }
+}
+
+.sidebar-2-container {
+  padding: 1rem;
+  width: 100%;
+}
+
+.sidebar-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;  
+  padding: 1rem;
+
+  .widget {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0 0 4rem;
+    padding: 0 1rem;
+    width: 26rem;
+
+    &-title {
+			color: #000;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0 1rem;
+    }
+  }
+}
+
 // Search form styles 
 .widget_search {
   margin: 1rem 0 0;
