--- a/sass/components/widgets/_widgets.scss
+++ b/sass/components/widgets/_widgets.scss
@@ -27,6 +27,23 @@
       flex-direction: column;
       align-items: flex-start;
       padding: 0 1rem;
+      width: 100%;
+
+      // a {
+      //   display: inline-block;
+      //   margin-bottom: .6rem;
+      // }
+
+      li:first-child {
+        border-top: 1px solid gray;
+      }
+
+      li {
+        border-bottom: 1px solid gray;
+        width: 100%;
+        display: inline-block;
+        padding: .8rem 0;
+      }
     }
   }
 }
