Basically done, just adding some last minute fixes

--- a/sass/components/content/_portfolio.scss
+++ b/sass/components/content/_portfolio.scss
@@ -313,6 +313,19 @@
   }
 }
 
+.credentials {
+	margin: 0 auto;
+}
+
+.certificate {
+	transition: all .4s ease-out;
+	transform: scale(.8);
+}
+
+.certificate:hover {
+	transform: scale(1);
+}  
+
 // Footer section 
 .footer-section__footer-info {
   text-align: center;
