--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -10,6 +10,7 @@ body {
 .site {
 	background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url('./img/light-blue-background.jpg');
   background-attachment: fixed;
+	box-shadow: inset 0 0 2rem 2px #000;
 }
 
 .block {
