--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -14,6 +14,10 @@
 --------------------------------------------- */
 @import "content/footer";
 
+/* 404
+--------------------------------------------- */
+@import "content/404"; 
+
 /* Portfolio
 --------------------------------------------- */
 @import "content/portfolio";  
