--- a/sass/components/content/_footer.scss
+++ b/sass/components/content/_footer.scss
@@ -8,6 +8,7 @@
   background-attachment: fixed;
   height: auto; 
   padding: 1rem 1rem 2rem;
+  box-shadow: 0 -.4rem 2rem 2px #000;
 }
 
 .site-info {
