--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -190,7 +190,7 @@
   
 }
 
-.entry-meta {
+.entry-meta { 
 
   span {
     color: #fff;
@@ -216,6 +216,10 @@
     &:hover::after {
       width: 100%;
     }
+  }
+
+  .updated {
+    display: none;
   }
 }
 
@@ -295,7 +299,7 @@
   min-width: 20rem;
   width: auto;
   color: #fff;
-  padding: .8rem 2rem;
+  padding: 1rem 5rem;
   border: none;
   border-radius: 3px;
   margin: .6rem 0;
